# 20240412-rust-cronjob

./: Cargo.toml  README.md
examples/: ex1-with-schedule.rs  ex2-with-apalis.rs
src/: lib.rs
